objects/EUR_CRM_Product_Toolkit_Item__c.object
<CustomObject>
    <fields>
        <fullName>EUR_CRM_Brand_Quality_Size__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Brand-Quality-Size</label>
        <referenceTo>EUR_CRM_Size__c</referenceTo>
        <relationshipLabel>Product Toolkit Items (EU)</relationshipLabel>
        <relationshipName>Product_Toolkit_Items_EU</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Brand_Quality__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Brand-Quality</label>
        <referenceTo>EUR_CRM_Quality__c</referenceTo>
        <relationshipName>Product_Toolkit_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Product_Toolkit__c</fullName>
        <label>Product Toolkit</label>
        <referenceTo>EUR_CRM_Product_Toolkit__c</referenceTo>
        <relationshipName>Product_Toolkit_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Product Toolkit Item (EU)</label>
    <listViews>
        <fullName>All_FI_Product_Toolkit_Items</fullName>
        <columns>NAME</columns>
        <columns>EUR_CRM_Brand_Quality__c</columns>
        <columns>EUR_CRM_Product_Toolkit__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Product_Toolkit_Item__c.EUR_FI_Product_Toolkit_Item</value>
        </filters>
        <label>All FI Product Toolkit Items</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>PTI-{0000000000}</displayFormat>
        <label>Product Toolkit Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Toolkit Items (EU)</pluralLabel>
    <recordTypes>
        <fullName>EUR_DK_OFF_Trade_Product_Toolkit_Item</fullName>
        <active>true</active>
        <label>EUR DK OFF Trade Product Toolkit Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_DK_ON_Trade_Product_Toolkit_Item</fullName>
        <active>true</active>
        <label>EUR DK ON Trade Product Toolkit Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_FI_Product_Toolkit_Item</fullName>
        <active>true</active>
        <label>EUR FI Product Toolkit Item</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>